# spoffy

./: .readthedocs.yml  LICENSE  README.md  codegen.py  doc-requirements.txt  mypy.ini  pyproject.toml  setup.cfg  todo.org  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: conf.py  content.rst  index.rst
docs/api/: modules.rst  spoffy.client.rst  spoffy.io.rst  spoffy.models.rst  spoffy.modules.rst  spoffy.rst
examples/: clientauth.py  flaskauth.py  usewithaiohttp.py  usewithrequests.py
spoffy/: __init__.py  clientmodule.py  exceptions.py  sansio.py  spotify.py  util.py
spoffy/client/: base.py  common.py
spoffy/io/: aiohttp.py  requests.py
spoffy/models/: __init__.py  audiofeatures.py  base.py  collections.py  compat.py  core.py  image.py  library.py  paging.py  partialclass.py  personalization.py  player.py  playlists.py  recommendations.py  search.py  token.py  users.py
spoffy/modules/: apimodule.py  mixins.py  modules.py  sansio.py
tests/: test_spoffy.py  test_util.py  util.py
tests/client/: test_common.py
tests/io/: conftest.py  test_aiohttp.py  test_requests.py
tests/mock/responses/: get_album.py  get_album_tracks.py  get_artist.py  get_artist_albums.py  get_audio_features.py  get_many_tracks.py  get_playlist.py  get_playlist_partial.py  get_track.py  library.py  personalization.py  player.py  search.py
tests/modules/: test_auth.py  test_sansio.py
tests/modules/snapshots/: snap_test_sansio.py
tests/sansio/: test_request.py  test_response.py
tests/unmarshalling/: test_models.py  util.py
