[tool.poetry]
name = "spoffy"
version = "1.0.1"
description = "Spotify API client with async and sync support"
authors = ["Steinthor Palsson <steini90@gmail.com>"]
readme = 'README.md'
license = 'Apache-2.0'
homepage = 'https://github.com/steinitzu/spoffy'
repository = 'https://github.com/steinitzu/spoffy'
documentation = 'https://spoffy.readthedocs.io'

keywords = [
  'spotify',
  'api-client',
  'async',
  'sans-io',
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
urlobject = "^2"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
snapshottest = "^0.6.0"
pluggy = "^1.4.0"
types-requests = "^2.31.0.20240125"
pytest = "^7.0"
flake8 = "^3.6"
mypy = "^1"
black = "^22"
pytest-cov = "^4.0"
sphinx = "^1.8"
sphinx-autodoc-typehints = "^1.6"
sphinx_rtd_theme = "^0.4.3"
aiohttp = "^3.9"
requests = "^2.21"
astor = "^0.8"
pytest-asyncio = "^0.23.4"
sphinxcontrib-asyncio = "^0.2.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
